--- a/apps/docs/src/content/components/radio.mdx
+++ b/apps/docs/src/content/components/radio.mdx
@@ -36,6 +36,17 @@ You can use the [`color`](/docs/styling#color-prop) prop to style the color of t
 </div>
 ```
 
+### Label position
+
+Use the `labelPosition` prop to change the position of the label.
+
+```tsx live
+<div className="flex flex-col gap-sm">
+  <HvRadio label="Label on the left" labelPosition="left" />
+  <HvRadio label="Label on the right" labelPosition="right" />
+</div>
+```
+
 ### Controlled
 
 Controlled radio button. Clicking the Radio button 1 does nothing, while clicking Radio button 2 changes both inputs.
