--- a/apps/docs/src/content/components/switch.mdx
+++ b/apps/docs/src/content/components/switch.mdx
@@ -46,6 +46,17 @@ export default function Demo() {
 }
 ```
 
+### Label position
+
+Use the `labelPosition` prop to change the position of the label.
+
+```tsx live
+<div className="flex flex-col gap-sm">
+  <HvSwitch label="Label on the left" labelPosition="left" />
+  <HvSwitch label="Label on the right" labelPosition="right" />
+</div>
+```
+
 ### Custom colors
 
 You can use the [`color`](/docs/styling#color-prop) prop to style the color of the switch.
