docs: add status icon cards samples

--- a/apps/docs/src/app/examples/kpis/page.mdx
+++ b/apps/docs/src/app/examples/kpis/page.mdx
@@ -8,6 +8,7 @@ import dataLoading from "./DataLoading?raw";
 import selectable from "./Selectable?raw";
 import semantic from "./Semantic?raw";
 import smallDonut from "./SmallDonut?raw";
+import statusIcon from "./StatusIcon?raw";
 
 ### KPI Cards
 
@@ -18,6 +19,12 @@ Discover various KPI card layouts and features to highlight important metrics in
 Showcase of KPI cards with different border colors to indicate status or category.
 
 <CodeBlock layout="expandable" code={semantic} />
+
+### Status Icons
+
+Showcase of KPI cards with different status icons.
+
+<CodeBlock layout="expandable" code={statusIcon} />
 
 ### Selectable Cards
 
